<resources>
    <string name="app_name">MovieExplorer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Movie, Actor ...</string>
    <string name="about_option">About</string>
    <string name="poster_description">movie poster</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="add_to_wishlist">add to wishlist</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="remove_from_wishlist">remove_wish</string>
    <string name="year">Year</string>
    <string name="genre_label">Genre</string>
    <string name="keywords_label">Keywords</string>
    <string name="no_data">No data to present</string>
    <string name="search_for_keywords">Search for keywords:</string>
    <string name="search">Search for phrase :</string>
    <string name="person_name">Name</string>
    <string name="popularity">Popularity</string>
    <string name="known_for">Known for</string>
    <string name="attribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
</resources>
